--- a/application.yml
+++ b/application.yml
@@ -8,7 +8,7 @@ source_list:
 SB:
   mysql_conf:
     partition_column: App_Transaction_Id
-    query: "(select * from monks.TRANSACTIONSYNC) as t"
+    query: "(select * from monks.TRANSACTIONSSYNC) as t"
 
 
   sftp_conf:
